Initial implementation completed, messages are successfully being sent

--- a/src/main/resources/jenkins/plugins/spark/Messages.properties
+++ b/src/main/resources/jenkins/plugins/spark/Messages.properties
@@ -12,7 +12,7 @@ Aborted=ABORTED
 NotBuilt=Not built
 Unstable=UNSTABLE
 
-JobStarted=$JOB_NAME #$BUILD_NUMBER $STATUS ($CHANGES_OR_CAUSE) (<a href="$URL">Open</a>)
-JobCompleted=$JOB_NAME #$BUILD_NUMBER $STATUS after $DURATION (<a href="$URL">Open</a>)
+JobStarted=$JOB_NAME #$BUILD_NUMBER $STATUS ($CHANGES_OR_CAUSE) ($URL)
+JobCompleted=$JOB_NAME #$BUILD_NUMBER $STATUS after $DURATION ($URL)
 
 Unknown=Unknown
