Updated message formatting for Spark to make it easier to read.

--- a/src/main/resources/jenkins/plugins/spark/Messages.properties
+++ b/src/main/resources/jenkins/plugins/spark/Messages.properties
@@ -2,7 +2,7 @@ DisplayName=Spark Notifications
 TestNotification=Test Notification {0}
 TestNotificationSent=Test Notification Sent
 
-StartWithChanges=Started by changes from {0} ({1} file(s) changed)
+StartWithChanges=Started by changes from {0}
 
 Started=Starting...
 BackToNormal=Back to normal
@@ -12,7 +12,7 @@ Aborted=ABORTED
 NotBuilt=Not built
 Unstable=UNSTABLE
 
-JobStarted=$JOB_NAME #$BUILD_NUMBER $STATUS ($CHANGES_OR_CAUSE) ($URL)
-JobCompleted=$JOB_NAME #$BUILD_NUMBER $STATUS after $DURATION ($URL)
+JobStarted=CI Job #$BUILD_NUMBER for "$JOB_NAME" $STATUS \n$CHANGES_OR_CAUSE \nJob URL: $URL
+JobCompleted=CI Job #$BUILD_NUMBER for "$JOB_NAME" $STATUS after $DURATION \nJob URL: $URL
 
 Unknown=Unknown
