--- a/src/main/resources/jenkins/plugins/spark/Messages.properties
+++ b/src/main/resources/jenkins/plugins/spark/Messages.properties
@@ -5,14 +5,14 @@ TestNotificationSent=Test Notification Sent
 StartWithChanges=Started by changes from {0}
 
 Started=Starting...
-BackToNormal=Back to normal
-Success=Success
-Failure=<b>FAILURE</b>
-Aborted=ABORTED
-NotBuilt=Not built
-Unstable=UNSTABLE
+BackToNormal=Back to normal \u2705
+Success=SUCCESS \u2705
+Failure=FAILURE \u274C
+Aborted=ABORTED \u274C
+NotBuilt=NOT BUILT \u274C
+Unstable=UNSTABLE \u274C
 
-JobStarted=CI Job #$BUILD_NUMBER for "$JOB_NAME" $STATUS \n$CHANGES_OR_CAUSE \nJob URL: $URL
-JobCompleted=CI Job #$BUILD_NUMBER for "$JOB_NAME" $STATUS after $DURATION \nJob URL: $URL
+JobStarted=CI Build #$BUILD_NUMBER for Job "$JOB_SHORT_NAME" $STATUS \n$CHANGES_OR_CAUSE \nJob URL: $URL
+JobCompleted=CI Build #$BUILD_NUMBER for Job "$JOB_SHORT_NAME" \nJob Status: $STATUS\nJob Duration: $DURATION \nJob URL: $URL
 
 Unknown=Unknown
