Updated message properties, and updated help tooltips

--- a/src/main/resources/jenkins/plugins/spark/Messages.properties
+++ b/src/main/resources/jenkins/plugins/spark/Messages.properties
@@ -12,7 +12,7 @@ Aborted=ABORTED \u274C
 NotBuilt=NOT BUILT \u274C
 Unstable=UNSTABLE \u274C
 
-JobStarted=CI Build #$BUILD_NUMBER for Job "$JOB_SHORT_NAME" $STATUS \n$CHANGES_OR_CAUSE \nJob URL: $URL
-JobCompleted=CI Build #$BUILD_NUMBER for Job "$JOB_SHORT_NAME" \nJob Status: $STATUS\nJob Duration: $DURATION \nJob URL: $URL
+JobStarted=CI Build #$BUILD_NUMBER for Job "$JOB_SHORT_NAME" $STATUS \n$CHANGES_OR_CAUSE \nBuild URL: $URL
+JobCompleted=CI Build #$BUILD_NUMBER for Job "$JOB_SHORT_NAME" \nBuild Status: $STATUS\nBuild Duration: $DURATION \nBuild URL: $URL
 
 Unknown=Unknown
